# airflow-prototype

./: .gitignore  README.md  airflow.cfg  pyproject.toml  run_arithmetic_dag.py
dags/: add_multiply_dag.py  async_benchmark_asyncio.py  async_benchmark_defer.py  async_calcjob.py  calcjob.py  calcjob.py.bak  calcjob_inheritance.py
dags/transport/: ssh.py
docs/: MIGRATION_GUIDE.md  PwBaseWorkChain_Implementation_Summary.md  PwBaseWorkChain_Migration_Guide.md
plugins/: async_calcjob_trigger.py  async_file_triggers.py  check_dagrun_db.py  custom_menu_plugin.py  custom_xcom_backend.py  dagrun_listener.py  dagrun_listener_async.py  dagrun_listener_taskgroup.py  my_plugin.py
src/airflow_provider_aiida/: __init__.py
src/airflow_provider_aiida/aiida_core/: __init__.py  transport.py
src/airflow_provider_aiida/bundles/: __init__.py  aiida_dag_bundle.py
src/airflow_provider_aiida/dags/: aiida.py
src/airflow_provider_aiida/decorators/: dag.py  tasks.py
src/airflow_provider_aiida/example_dags/: aiida_example_arithmetic_calcjob.py  arithmetic_add.py  arithmetic_aiida_native.py  async_arithmetic_add.py  qe_baseworkchain.py  qe_pw_scf_airflow.py  test_while_loop.py
src/airflow_provider_aiida/hooks/: ssh.py
src/airflow_provider_aiida/operators/: async_aiida_calcjob.py  async_calcjob.py  calcjob.py
src/airflow_provider_aiida/plugins/: aiida_dag_run_listener.py  aiida_ui.py  custom_ui.py  dagrun_listener.py  dagrun_listener_async.py  dagrun_listener_taskgroup.py.bak
src/airflow_provider_aiida/taskgroups/: __init__.py  aiida_calcjob.py  async_aiida_calcjob.py  (+3 more)
tests/bundles/: __init__.py  test_aiida_dag_bundle.py
tests/dags/: arithmetic_add.py
tests/hooks/: test_ssh_hook.py
tests/operators/: test_async_calcjob.py  test_calcjob.py
tests/triggers/: __init__.py  test_async_calcjob.py
(+11 files in other folders)
